buildscript {
  dependencies {
    classpath "org.flywaydb:flyway-database-postgresql:12.8.1"
  }
}


plugins {
  id 'application'
  id 'checkstyle'
  id 'pmd'
  id 'jacoco'
  id 'com.github.ben-manes.versions' version '0.54.0'
  id 'com.gorylenko.gradle-git-properties' version '4.0.1'
  id 'io.spring.dependency-management' version '1.1.7'
  id 'net.serenity-bdd.serenity-gradle-plugin' version '5.3.9'
  id 'org.flywaydb.flyway' version '12.6.2'
  id 'org.owasp.dependencycheck' version '12.2.2'
  id 'org.sonarqube' version '7.3.1.8318'
  id 'org.springframework.boot' version '4.1.0'
  id 'uk.gov.hmcts.java' version '0.12.70'
  id "info.solidsoft.pitest" version '1.19.0'
}

group = 'uk.gov.hmcts.reform'
version = '0.0.1'

java {
  toolchain {
    languageVersion = JavaLanguageVersion.of(21)
  }
}

tasks.withType(JavaExec).configureEach {
  javaLauncher.set(javaToolchains.launcherFor(java.toolchain))
}

gitProperties {
  gitPropertiesResourceDir = new File("${project.rootDir}/src/main/resources/uk/gov/hmcts/reform/laubackend/cases/gitcommit")
  keys = ['git.commit.id', 'git.commit.time']
  dateFormat = "yyyy-MM-dd'T'HH:mmZ"
  dateFormatTimeZone = "GMT"
}

sourceSets {
  test {
    java {
      compileClasspath += main.output
      runtimeClasspath += main.output
      srcDir file('src/test/java')
    }
    resources.srcDir file('src/test/resources')
  }

  functionalTest {
    java {
      compileClasspath += main.output
      runtimeClasspath += main.output
      srcDir file('src/functionalTest/java')
    }
    resources.srcDir file('src/functionalTest/resources')
  }

  integrationTest {
    java {
      compileClasspath += main.output
      runtimeClasspath += main.output
      srcDir file('src/integrationTest/java')
    }
    resources.srcDir file('src/integrationTest/resources')
  }

  smokeTest {
    java {
      compileClasspath += main.output
      runtimeClasspath += main.output
      srcDir file('src/smokeTest/java')
    }
    resources.srcDir file('src/smokeTest/resources')
  }
}

tasks.withType(JavaCompile) {
  options.compilerArgs << "-Xlint:unchecked" << "-Werror"
}

test {
  useJUnitPlatform()
  failFast = true
}

configurations {
  cucumberRuntime {
    extendsFrom testImplementation
  }
  integrationTestImplementation.extendsFrom testCompile
  integrationTestRuntime.extendsFrom testRuntime
  functionalTestImplementation.extendsFrom testCompile
  functionalTestRuntime.extendsFrom testRuntime
  smokeTestRuntime.extendsFrom testRuntime
}

task unit(type: Test, description: 'Runs the unit tests.', group: 'Verification') {
  testClassesDirs = sourceSets.test.output.classesDirs
  classpath = sourceSets.test.runtimeClasspath
  useJUnitPlatform()
}

task functional(type: Test) {
  systemProperty "scenario", System.getProperty('scenario')
  description = "Runs functional tests"
  group = "Verification"
  testClassesDirs = sourceSets.functionalTest.output.classesDirs
  classpath = sourceSets.functionalTest.runtimeClasspath
  useJUnitPlatform()
  finalizedBy aggregate
}

task integration(type: Test) {
    description = "Runs integration tests"
    group = "Verification"
    testClassesDirs = sourceSets.integrationTest.output.classesDirs
    classpath = sourceSets.integrationTest.runtimeClasspath
    mustRunAfter test
}
check.dependsOn integration

task smoke(type: Test) {
  description = "Runs Smoke Tests"
  testClassesDirs = sourceSets.smokeTest.output.classesDirs
  classpath = sourceSets.smokeTest.runtimeClasspath
  useJUnitPlatform()
}

task fortifyScan(type: JavaExec)  {
    mainClass = "uk.gov.hmcts.fortifyclient.FortifyClientMainApp"
    classpath += sourceSets.test.runtimeClasspath
    jvmArgs = ['--add-opens=java.base/java.lang.reflect=ALL-UNNAMED']
}

checkstyle {
  maxWarnings = 0
  toolVersion = '13.5.0'
  getConfigDirectory().set(new File(rootDir, 'config/checkstyle'))
}

pmd {
  toolVersion = "7.25.0"
  sourceSets = [sourceSets.main, sourceSets.test, sourceSets.functionalTest, sourceSets.integrationTest, sourceSets.smokeTest]
  reportsDir = file("$project.buildDir/reports/pmd")
  // https://github.com/pmd/pmd/issues/876
  ruleSets = []
  ruleSetFiles = files("config/pmd/ruleset.xml")
}

project.tasks['jacocoTestReport'].dependsOn test, integration

jacocoTestReport {
  executionData(test, integration)
  reports {
    xml.required = true
    csv.required = false
    xml.outputLocation = file("${buildDir}/reports/jacoco/test/jacocoTestReport.xml")
  }
}

pitest {
  junit5PluginVersion.set('1.2.1')
  targetClasses = ['uk.gov.hmcts.reform.laubackend.*']
  excludedClasses = [
    'uk.gov.hmcts.reform.laubackend.cases.madeup.*'
  ]
  threads = 10
  enableDefaultIncrementalAnalysis = true
  outputFormats = ['XML', 'HTML']
  timestampedReports = false
  mutationThreshold = 50
  timeoutConstInMillis = 30000
  mutators.set([
    'CONDITIONALS_BOUNDARY',
    'INCREMENTS',
    'INVERT_NEGS',
    'MATH',
    'NEGATE_CONDITIONALS',
    'VOID_METHOD_CALLS',
    'EMPTY_RETURNS',
    'FALSE_RETURNS',
    'NULL_RETURNS',
    'PRIMITIVE_RETURNS',
    'TRUE_RETURNS',
    'REMOVE_CONDITIONALS'
  ])
}

project.tasks['pitest'].group = "Verification"

project.tasks['sonarqube'].dependsOn jacocoTestReport

sonarqube {
  properties {
    property "sonar.projectName", "Reform :: lau-case-backend"
    property "sonar.projectKey", "uk.gov.hmcts.reform:lau-case-backend"
    property "sonar.coverage.jacoco.xmlReportPaths", "${buildDir}/reports/jacoco/test/jacocoTestReport.xml"
    property "sonar.pitest.mode", "reuseReport"
    property "sonar.pitest.reportsDirectory", "build/reports/pitest"
  }
}

// before committing a change, make sure task still works
dependencyUpdates {
  def isNonStable = { String version ->
    def stableKeyword = ['RELEASE', 'FINAL', 'GA'].any { qualifier -> version.toUpperCase().contains(qualifier) }
    def regex = /^[0-9,.v-]+$/
    return !stableKeyword && !(version ==~ regex)
  }
  rejectVersionIf { selection -> // <---- notice how the closure argument is named
    return isNonStable(selection.candidate.version) && !isNonStable(selection.currentVersion)
  }
}

// https://jeremylong.github.io/DependencyCheck/dependency-check-gradle/configuration.html
dependencyCheck {
  // Specifies if the build should be failed if a CVSS score above a specified level is identified.
  // range of 0-10 fails the build, anything greater and it doesn't fail the build
  failBuildOnCVSS = System.getProperty('dependencyCheck.failBuild') == 'true' ? 0 : 11
  suppressionFile = 'config/owasp/suppressions.xml'

  analyzers {
    // Disable scanning of .NET related binaries
    assemblyEnabled = false
  }
}

dependencyManagement {
  dependencies {
    dependencySet(group: 'ch.qos.logback', version: '1.5.34') {
      entry 'logback-core'
      entry 'logback-classic'
    }
  }
  imports {
    mavenBom 'org.springframework.cloud:spring-cloud-dependencies:2025.1.2'
  }
}

repositories {
  mavenLocal()
  mavenCentral()
  maven {
    url = 'https://pkgs.dev.azure.com/hmcts/Artifacts/_packaging/hmcts-lib/maven/v1'
  }
}


def versions = [
  commonsIo         : '2.22.0',
  flywaydb          : '12.8.1',
  cucumber          : '7.34.3',
  gradlePitest      : '1.15.0',
  junit             : '5.12.2',
  junitPlatform     : '1.12.2',
  log4j             : '2.26.0',
  lombok            : '1.18.46',
  restAssured       : '6.0.0',
  serenity          : '5.3.10',
  sonarPitest       : '0.5',
  testcontainers    : '2.0.5',
]

ext['tomcat.version'] = '11.0.23'
ext['netty.version'] = '4.2.15.Final'

configurations.all {
  resolutionStrategy {
    eachDependency { DependencyResolveDetails details ->
      if (details.requested.group in ['org.apache.logging.log4j']) {
        details.useVersion versions.log4j
      }
      if (details.requested.name == 'commons-lang3') {
        details.useVersion '3.18.0'
      }
    }
  }
}

dependencies {
  modules {
    module("com.google.collections:google-collections") {
      replacedBy("com.google.guava:guava", "google-collections is part of guava")
    }
  }

  implementation "commons-fileupload:commons-fileupload:1.6.0"
  implementation "commons-io:commons-io:${versions.commonsIo}"
  implementation "org.springframework.boot:spring-boot-starter-webmvc"
  implementation "org.springframework.boot:spring-boot-starter-actuator"
  implementation "org.springframework.boot:spring-boot-starter-json"
  implementation "org.springframework.boot:spring-boot-starter-data-jpa"
  implementation "org.springframework.boot:spring-boot-starter-jdbc"
  implementation "org.springframework.boot:spring-boot-starter-security"
  implementation "org.springframework.boot:spring-boot-starter-webflux"
  implementation "org.springframework.boot:spring-boot-flyway"
  implementation "org.springframework.boot:spring-boot-devtools"
  implementation "org.springframework.cloud:spring-cloud-starter"
  implementation "org.springframework.cloud:spring-cloud-starter-openfeign"
  implementation "org.springframework.cloud:spring-cloud-starter-bootstrap"
  implementation "org.springdoc:springdoc-openapi-starter-webmvc-ui:3.0.3"
  implementation "com.github.hmcts:service-auth-provider-java-client:6.0.0"
  implementation "com.github.hmcts:idam-java-client:4.0.0"
  implementation "com.github.hmcts.java-logging:logging:8.0.0"
  implementation "org.flywaydb:flyway-core:${versions.flywaydb}"
  implementation "org.flywaydb:flyway-database-postgresql:${versions.flywaydb}"
  implementation "org.postgresql:postgresql:42.7.11"
  implementation "org.yaml:snakeyaml:2.6"
  implementation "org.apache.logging.log4j:log4j-api:${versions.log4j}"
  implementation "org.apache.logging.log4j:log4j-to-slf4j:${versions.log4j}"
  implementation "org.projectlombok:lombok:${versions.lombok}"
  implementation "jakarta.servlet:jakarta.servlet-api:6.1.0"
  implementation "com.microsoft.azure:applicationinsights-core:3.7.9"
  implementation "com.microsoft.azure:applicationinsights-web:3.7.9"
  implementation "org.hibernate.validator:hibernate-validator:9.1.1.Final"

  annotationProcessor "org.projectlombok:lombok:${versions.lombok}"

  testImplementation "info.solidsoft.gradle.pitest:gradle-pitest-plugin:${versions.gradlePitest}"
  testImplementation "org.codehaus.sonar-plugins:sonar-pitest-plugin:0.5"
  testImplementation "com.github.hmcts:fortify-client:1.4.10:all"
  testImplementation "org.testcontainers:testcontainers:${versions.testcontainers}"
  testImplementation "org.testcontainers:testcontainers-postgresql:${versions.testcontainers}"
  testImplementation "org.wiremock:wiremock-standalone:3.13.2"
  testImplementation "net.serenity-bdd:serenity-core:${versions.serenity}", {
    exclude group: 'org.jetbrains.kotlin', module: 'kotlin-stdlib'
  }
  testImplementation "net.serenity-bdd:serenity-junit5:${versions.serenity}"
  testImplementation "net.serenity-bdd:serenity-rest-assured:${versions.serenity}"
  testImplementation "io.cucumber:cucumber-spring:${versions.cucumber}"
  testImplementation "io.cucumber:cucumber-junit:${versions.cucumber}"
  testImplementation "io.cucumber:cucumber-java:${versions.cucumber}"
  testImplementation "org.jetbrains.kotlin:kotlin-stdlib:2.4.0"
  testImplementation "org.springframework.boot:spring-boot-starter-test"
  testImplementation "org.springframework.boot:spring-boot-starter-data-jpa-test"
  testImplementation "org.springframework.cloud:spring-cloud-starter-contract-stub-runner"

  integrationTestImplementation "org.testcontainers:testcontainers:${versions.testcontainers}"
  integrationTestImplementation "org.testcontainers:testcontainers-postgresql:${versions.testcontainers}"

  integrationTestCompileOnly "org.projectlombok:lombok:${versions.lombok}"
  integrationTestAnnotationProcessor "org.projectlombok:lombok:${versions.lombok}"

  integrationTestImplementation sourceSets.main.runtimeClasspath
  integrationTestImplementation sourceSets.test.runtimeClasspath

  functionalTestImplementation sourceSets.main.runtimeClasspath
  functionalTestImplementation sourceSets.test.runtimeClasspath
  functionalTestCompileOnly "org.projectlombok:lombok:${versions.lombok}"
  functionalTestAnnotationProcessor "org.projectlombok:lombok:${versions.lombok}"

  smokeTestImplementation "io.rest-assured:rest-assured:${versions.restAssured}"
  smokeTestImplementation "io.rest-assured:rest-assured-common:${versions.restAssured}"
  smokeTestImplementation "io.rest-assured:json-path:${versions.restAssured}"
  smokeTestImplementation "io.rest-assured:xml-path:${versions.restAssured}"

  smokeTestImplementation sourceSets.main.runtimeClasspath
  smokeTestImplementation sourceSets.test.runtimeClasspath

//Added for FN tests
  testImplementation "io.rest-assured:rest-assured:${versions.restAssured}"
  testImplementation "io.rest-assured:json-path:${versions.restAssured}"
  testImplementation "io.rest-assured:xml-path:${versions.restAssured}"
  testImplementation "com.google.code.gson:gson:2.14.0"
  testImplementation "com.googlecode.junit-toolbox:junit-toolbox:2.4"
  testImplementation "org.testng:testng:7.12.0"

  cucumberRuntime "io.cucumber:cucumber-java:${versions.cucumber}"
  cucumberRuntime "org.springframework:spring-web"
  cucumberRuntime "io.rest-assured:rest-assured:${versions.restAssured}"
  cucumberRuntime "io.rest-assured:json-path:${versions.restAssured}"
  cucumberRuntime "io.rest-assured:xml-path:${versions.restAssured}"
  cucumberRuntime "net.serenity-bdd:serenity-rest-assured"
  cucumberRuntime "com.google.code.gson:gson:2.14.0"
  cucumberRuntime "com.googlecode.junit-toolbox:junit-toolbox:2.4"
  cucumberRuntime "org.testng:testng:7.12.0"

  testCompileOnly "org.projectlombok:lombok:${versions.lombok}"
  testAnnotationProcessor "org.projectlombok:lombok:${versions.lombok}"

  testImplementation "jakarta.el:jakarta.el-api:6.0.1"
}

flyway {
  url = System.getenv('FLYWAY_URL')
  user = System.getenv('FLYWAY_USER')
  password = System.getenv('FLYWAY_PASSWORD')

  if (System.getenv('LAU_DB_PASSWORD')) {
    placeholders = [
      'LAU_DB_PASSWORD': System.getenv('LAU_DB_PASSWORD')
    ]
  }

  baselineOnMigrate = true
  baselineVersion = '000'

}

import org.flywaydb.gradle.task.FlywayMigrateTask

task migratePostgresDatabase(type: FlywayMigrateTask) {
  baselineOnMigrate = true
  if (project.hasProperty("dburl")) {
    url = "jdbc:postgresql://${dburl}"
  }
}

application {
  mainClass = 'uk.gov.hmcts.reform.laubackend.cases.Application'
}


bootJar {
  getArchiveFileName().set(provider {
    'lau-case-backend.jar'
  })

  manifest {
    attributes('Implementation-Version': project.version.toString())
  }
}

rootProject.tasks.named("processSmokeTestResources") {
  duplicatesStrategy = 'include'
}

rootProject.tasks.named("processIntegrationTestResources") {
  duplicatesStrategy = 'include'
}

rootProject.tasks.named("processFunctionalTestResources") {
  duplicatesStrategy = 'include'
}

rootProject.tasks.named("processTestResources") {
  duplicatesStrategy = 'include'
}

rootProject.tasks.named("processResources") {
  dependsOn("generateGitProperties")
}

wrapper {
  distributionType = Wrapper.DistributionType.ALL
}

bootRun {
  systemProperties = System.properties
}

gradle.startParameter.continueOnFailure = true
